build(Infra.Data.csproj): add folder reference

--- a/CleanCore.Infra.Data/CleanCore.Infra.Data.csproj
+++ b/CleanCore.Infra.Data/CleanCore.Infra.Data.csproj
@@ -5,9 +5,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="EntityConfiguration\" />
     <Folder Include="Identity\" />
     <Folder Include="Repositories\" />
+    <Folder Include="EntityConfiguration\" />
+    <Folder Include="Context\" />
   </ItemGroup>
 
   <ItemGroup>
