--- a/CleanCore.WebUI/appsettings.json
+++ b/CleanCore.WebUI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=matheus\\SQLEXPRESS;Initial Catalog=CleanCore;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
