--- a/CleanCore.WebUI/appsettings.json
+++ b/CleanCore.WebUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=matheus\\SQLEXPRESS;Initial Catalog=CleanCore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=matheus\\SQLEXPRESS;Initial Catalog=CleanCore;Trust Server Certificate=True;Encrypt=True;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
