build(WebUI): added reference

--- a/CleanCore.WebUI/CleanCore.WebUI.csproj
+++ b/CleanCore.WebUI/CleanCore.WebUI.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\CleanCore.Infra.IoC\CleanCore.Infra.IoC.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
